# ray-tracer

./: .clangd  .gitignore  CMakeLists.txt  README.md  analysis.txt
.cache/clangd/index/: camera.cpp.2D6FE141A823E150.idx  camera.hpp.4C77EBE55BF22867.idx  color.hpp.F5C9FDB03EF20EC8.idx  common.hpp.412B78379CC97767.idx  hittable.hpp.0E913043311EE51C.idx  hittable_list.hpp.E50B2EF4761E20F4.idx  interval.hpp.A71389CE1647AD71.idx  main.cpp.5FA6DB14A1247596.idx  ray.hpp.087B93FC0F98A35C.idx  sphere.hpp.60962C1062359B86.idx  vec3.hpp.BD1C77B2C8229531.idx
include/: camera.hpp  color.hpp  common.hpp  device_helper.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  point.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
include/cuda/: cu_allocate.hpp  cu_camera.hpp  cu_hittable.hpp  cu_hittable_list.hpp  cu_material.hpp  cu_sphere.hpp
kernel/: allocate.cu  device_helper.cu
src/: camera.cpp  hittable.cpp  main.cpp
